<resources>
    <string name="app_name">Peak Test</string>

    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="stats">Stats</string>
    <string name="back">Back</string>

    <!--Stats Activity-->
    <string name="statsSquares">Squares :</string>
    <string name="statsCircles">Circles :</string>
    <string name="statsTriangles">Triangles :</string>
</resources>
